# rumgap

./: .env  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  gen-entities.bat  gen-entities.sh  icon2.ico.dis  log4rs.yml  rustfmt.toml
.github/workflows/: rust.yml
.github/wrorkflows/: github-actions.yml
configs/: default.yaml.dis  madara.yaml  mangakakalot.yaml  weebcentral.yaml
entity/: Cargo.toml
entity/src/: chapter.rs  chapter_offset.rs  friend.rs  lib.rs  manga.rs  prelude.rs  reading.rs  user.rs
manga_parser/: Cargo.toml
manga_parser/parser_macro_derive/: Cargo.toml
manga_parser/parser_macro_derive/src/: lib.rs
manga_parser/src/: parse_error.rs
manga_parser/src/model/: chapter.rs  manga.rs  scraper_queries.rs
manga_parser/src/plugin/: generic_query_parser.rs  manga_kakalot.rs  mangadex.rs
manga_parser/tests/: test.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220604_195200_create_manga_table.rs  m20220607_015227_create_chapter_table.rs  m20220613_113414_create_user_table.rs  m20220613_124113_create_reading_table.rs  m20220626_215645_manga_fulltext.rs  m20221127_174330_create_triggers.rs  m20221127_174334_create_user.rs  m20221127_180216_create_friend.rs  m20221130_215742_create_manga.rs  m20221130_215749_create_chapter.rs  m20221130_215753_create_reading.rs  m20230206_144400_create_chapter_offset.rs  m20230212_132547_add_page_column_to_chapter_offset.rs  m20230219_170615_add_device_ids_column_to_user.rs  m20231116_195236_fix_timestamps.rs  m20231125_223257_add_status_to_manga.rs  trigger.rs
migration/src/extension/: mod.rs  timestamps.rs
parser/: Cargo.toml
parser/parser_macro_derive/src/: lib.rs
parser/src/: lib.rs  parse_error.rs  parser.rs  util.rs
parser/src/model/: chapter.rs  manga.rs  mod.rs  scraper_queries.rs  search_manga.rs
parser/src/plugin/: generic_query_parser.rs  madara.rs  manga_347.rs  mangadex.rs  mod.rs  read_m.rs  reaper_scans.rs
parser/tests/: test.rs
proto/: chapter.proto  friend.proto  manga.proto  meta.proto  paginate.proto  reading.proto  rumgap.proto  search.proto  user.proto
proto/rumgap/: rumgap.proto
proto/rumgap/v1/: chapter.proto  friend.proto  manga.proto  meta.proto  paginate.proto  reading.proto  rumgap.proto  scrape_error.proto  search.proto  user.proto  v1.proto
schema/: array_selector.schema.yaml  config.schema.yaml  string_selector.schema.yaml  test_array_selector.schema.yaml  test_string_selector.schema.yaml
src/: auth.rs  cors.rs  main.rs  pagination.rs  pool.rs  test.rs
src/api/: chapter.rs  login.rs  manga.rs  mod.rs  reading.rs  register.rs  search.rs
src/api/v1/: mod.rs  user.rs
src/api/v1/data/: manga.rs  mod.rs  paginate.rs  reading.rs  user.rs
src/api/v1/route/: chapter.rs  manga.rs  mod.rs  reading.rs  user.rs
src/api/v1/test/: mod.rs
src/api/v1/util/: encrypt.rs  mod.rs  permission.rs  verify.rs
src/api/v1/util/order/: manga.rs  mod.rs  reading.rs
src/api/v1/util/search/: date_format.rs  field.rs  manga.rs  mod.rs  parse.rs  reading.rs
src/data/: chapter.rs  manga.rs  mod.rs  reading.rs  user.rs
src/interceptor/: auth.rs  logger.rs  mod.rs
src/middleware/: auth.rs
src/service/: chapter.rs  friend.rs  manga.rs  meta.rs  mod.rs  reading.rs  search.rs  user.rs  verify.rs
src/service/v1/: chapter.rs  friend.rs  manga.rs  meta.rs  mod.rs  reading.rs  search.rs  user.rs
src/test/: mod.rs
src/tls/: gen_tls.sh  server-ext.cnf
src/util/: argon.rs  auth.rs  db.rs  mod.rs  scrape_error_proto.rs  updater.rs  verify.rs
src/util/order/: manga.rs  mod.rs
src/util/search/: date_format.rs  field.rs  manga.rs  mod.rs  parse.rs  reading.rs
