[package]
authors = ["hubble459 <geraldd459@gmail.com>"]
edition = "2021"
name = "rumgap"
publish = false
version = "0.1.0"

[workspace]
members = [".", "manga_parser", "migration", "entity"]

[dependencies]
tonic = { version = "0.8", features = ["tower"] }
tonic-reflection = "0.6"
tower = { version = "0.4" }
tonic-async-interceptor = "0.1.0"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
manga-parser = {path = "manga_parser"}
migration = {path = "migration"}
entity = {path = "entity"}
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["gzip"] }
lazy_static = "1.4.0"
argon2 = "0.4.1"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
chrono = "0.4.23"
regex = "1.7.0"
dotenvy = "0.15.6"
listenfd = "1.0.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
bitflags = "2.0.0-rc.1"
once_cell = "1.16.0"
sea-orm = { version = "0.10.5" }
phf = { version = "0.11.1", features = ["macros"] }
derive_more = "0.99.17"
futures = {version = "0.3.25"}
futures-util = {version = "0.3.25"}

[build-dependencies]
tonic-build = "0.8"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
