[package]
authors = ["hubble459 <geraldd459@gmail.com>"]
edition = "2021"
name = "rumgap"
publish = false
version = "0.1.0"

[workspace]
resolver = "2"
members = [".", "migration", "entity"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
tonic = { version = "0.12", features = ["gzip", "tls"] }
tonic-reflection = "0.12"
tower = { version = "0.5" }
tonic-async-interceptor = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
migration = { path = "migration" }
entity = { path = "entity" }
log = "0"
log4rs = { version = "1.2.0", features = ["gzip"] }
lazy_static = "1"
argon2 = "0.5"
hmac = "0"
jwt = "0"
sha2 = "0"
chrono = "0"
regex = "1"
dotenvy = "0"
listenfd = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = "2"
once_cell = "1"
sea-orm = { version = "0.12" }
phf = { version = "0", features = ["macros"] }
futures = { version = "0" }
futures-util = { version = "0" }
manga_parser = { git = "https://github.com/hubble459/manga_parser" }
# manga_parser = { path = "../manga_parser" }
fcm = { git = "https://github.com/rj76/fcm-rust.git" }
hyper = { version = "1", features = ["http1", "http2"] }

[build-dependencies]
glob = "0"
tonic-build = "0.12"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
