[package]
edition = "2021"
name = "entity"
publish = false
version = "0.1.0"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.19"
parser = {path = "../parser"}
rocket = {version = "0.5.0-rc.1", features = [
  "json",
]}

[dependencies.sea-orm]
features = ["with-chrono"]
version = "^0.8.0"
