[package]
name = "manga-parser"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "manga_parser"
path = "src/lib.rs"

[dependencies]
crabquery = { path = "crabquery" }
parser_macro_derive = { path = "parser_macro_derive" }
log = "*"
env_logger = "*"
lazy_static = "1"
regex = "^1"
reqwest = "0.11.12"
urlencoding = "2.1.2"
chrono = "0.4.23"
async-trait = "0.1"
anyhow = "1"
futures = {version = "^0.3"}
futures-util = {version = "^0.3"}
serde = "^1"
serde_json = {version = "^1"}
tokio = {version = "^1.21", features = ["macros", "rt-multi-thread"]}
mangadex-api = {version="1.3.0", features=["chrono", "multi-thread"]}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
itertools = "0.10.5"
thiserror = "1.0"