[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
rocket = { version = "0.5.0-rc.2" }
async-std = { version = "^1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "^0.10"
features = [
  # Enable following runtime and db backend features if you want to run migration via CLI
  "runtime-tokio-native-tls",
  "sqlx-mysql",
]
