[package]
name = "parser"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "parser"
path = "src/lib.rs"

[dependencies]
reqwest = "0.11.10"
chrono = "0.4.19"
async-trait = "0.1"
anyhow = "1"
futures = {version = "^0.3"}
futures-util = {version = "^0.3"}
serde = "^1"
serde_json = {version = "^1"}
tokio = {version = "^1.19", features = ["macros", "rt-multi-thread"]}
mangadex-api = {version="1.3.0", features=["chrono", "multi-thread"]}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
itertools = "0.10.3"